# MBG_duplex

./: README.md
assets/test/: prompt_backchannel.txt
moshi-finetune/: README.md  _train_cached.py  bench_inference.py  count_dataset.py  eval_bc_event.py  face_generation.py  pyproject.toml  setup.cfg  test_inference.py  train.py  visualize_stereo.py
moshi-finetune/config/: ami_simple.yaml  ami_test.yaml  ami_vap.yaml  ami_vap_gpt.yaml  ami_vap_gpt_voice.yaml  ami_vap_gpt_voice_face.yaml  example.yaml
moshi-finetune/data/: annotate_word_timestamps.py  map_voice_samples.py  split_dataset.py
moshi-finetune/finetune/: args.py  checkpointing.py  distributed.py  eval.py  loss.py  utils.py  wrapped_model.py
moshi-finetune/finetune/data/: _cached_dataset.py  args.py  data_loader.py  dataset.py  interleaver.py
moshi-finetune/finetune/monitoring/: metrics_logger.py
moshi/moshi/models/: backchannel_vap.py  lm.py  loaders.py  vap_gpt_module.py
moshi/moshi/models/face/: prepare_mimi_flame_stats.py  report_mimi_flame_length_mismatches.py  softvq_audio_infer.py  softvq_continuous_online_infer.py  softvq_continuous_online_train.py  train.py
moshi/moshi/models/face/configs/: artalk_codec.yaml  artalk_codec_mimi54.yaml  artalk_gen_mimi54.yaml
moshi/moshi/models/face/core/data/: mimi_flame_data.py
moshi/moshi/models/face/core/libs/: utils.py
moshi/moshi/models/face/docs/: NO_IMAGE_EDITABLE_softvq_main_figure.pptx  make_softvq_editable_pptx.py  make_softvq_figure_pptx.py  softvq_main_figure_detailed.pptx
moshi/moshi/modules/: gating.py
(+6 files in other folders)
