[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "finetune"
version = "0.0.1"
description = "Personaplex MBG finetuning package"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "fire",
    "simple-parsing",
    "safetensors",
    "sentencepiece",
    "sphn",
    "numpy",
    "huggingface-hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["finetune*"]
